# fj

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: pair.java  simple_class.java
includes/: base_types.h  class_body.h  context.h  eval_term_visitor.h  method_body.h  term_visitor.h  type.h  utils.h
includes/ast/: builder.h  class_body.h  class_table.h  context_builder.h  lexer_term_builder.h  method_body.h  structures.h  term.h
includes/interactive/: command.h  help_command.h  import_command.h  info_command.h  interpret_command.h  mode.h
includes/lexer/: errors.h  lexemes.h  lexer.h  lexer_term_visitor.h  parser_rules.h  parsing_structures.h  structures.h
src/: ast_struct.h  base_types.h  class_body.cpp  class_body.h  context.cpp  context.h  evalTermVisitor.cpp  evalTermVisitor.h  eval_term_visitor.cpp  eval_term_visitor.h  main.cpp  method_body.cpp  method_body.h  term.cpp  term.h  term_visitor.h  type.cpp  utils.cpp  utils.h
src/ast/: builder.cpp  class_body.cpp  class_table.cpp  context_builder.cpp  lexer_term_builder.cpp  method_body.cpp  term.cpp
src/interactive/: help_command.cpp  import_command.cpp  info_command.cpp  interpret_command.cpp  mode.cpp
src/lexer/: errors.cpp  lexer.cpp  parsing_structures.cpp  structures.cpp
src/tokenizer/: bracket_token.cpp  bracket_token.h  keyword_token.cpp  keyword_token.h  token.h  token_builder.cpp  token_builder.h  tokenizer.cpp  tokenizer.h
test/: class_body_test.cpp  context_builder_test.cpp  context_test.cpp  evaluation_test.cpp  evaluation_test.cpp.cpp  lexer_errors_test.cpp  main_test.cpp  term_builder_test.cpp  tokenizer_test.cpp
test/lexer/: access_term_test.cpp  invocation_term_test.cpp
